[gd_scene load_steps=11 format=3 uid="uid://bay8evl37k13y"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_ou4jy"]
[ext_resource type="Texture2D" uid="uid://iwwxpbokt268" path="res://Assets/milky-way-spiraling-across-the-inky-blackness-of-a-star-filled-sky-myriad-constellations-linked-by--156040200.png" id="2_ih2n3"]
[ext_resource type="Texture2D" uid="uid://c2wo2grb37d6g" path="res://Assets/Character/DALLÂ·E 2024-07-24 12.12.19 - A terrifying fantasy angel with dark, tattered wings, glowing red eyes, and a menacing aura. The angel is clad in dark, ancient armor with runes glowi.webp" id="3_nedp7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_57jqd"]
size = Vector2(120, 120)

[sub_resource type="Animation" id="Animation_iikgs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_jqi52"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g1iis"]
_data = {
"RESET": SubResource("Animation_iikgs"),
"attack": SubResource("Animation_jqi52")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xjc6c"]
texture = ExtResource("2_ih2n3")
texture_region_size = Vector2i(1024, 1024)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_rkp8k"]
tile_size = Vector2i(1024, 1024)
sources/0 = SubResource("TileSetAtlasSource_xjc6c")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1krm"]
size = Vector2(700, 700)

[node name="Player" type="CharacterBody2D"]
collision_mask = 0
script = ExtResource("1_ou4jy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_57jqd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AttackArea")
libraries = {
"": SubResource("AnimationLibrary_g1iis")
}

[node name="AttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="TileMap" type="TileMap" parent="AttackArea"]
position = Vector2(64, 64)
scale = Vector2(0.125, 0.125)
tile_set = SubResource("TileSet_rkp8k")
format = 2
layer_0/z_index = 1
layer_0/tile_data = PackedInt32Array(-65539, 0, 0, -3, 0, 0, 65533, 0, 0, -131074, 0, 0, -2, 0, 0, 65534, 0, 0, 131070, 0, 0, -131073, 0, 0, 65535, 0, 0, 131071, 0, 0, -196608, 0, 0, -131072, 0, 0, 0, 0, 0, 65536, 0, 0, -131071, 0, 0, -196609, 0, 0, -65534, 0, 0, -4, 0, 0, 196607, 0, 0, -196607, 0, 0, -196610, 0, 0, -65540, 0, 0, 131069, 0, 0, 65537, 0, 0, -262144, 0, 0, -131070, 0, 0, 131072, 0, 0, 196606, 0, 0, 65532, 0, 0, 262143, 0, 0, -65533, 0, 0, -262145, 0, 0, -5, 0, 0, -131075, 0, 0, -65538, 0, 0, -65537, 0, 0, -65536, 0, 0, -65535, 0, 0, 1, 0, 0, 2, 0, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
rotation = 0.785398
shape = SubResource("RectangleShape2D_s1krm")
disabled = true

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_nedp7")

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 6

[node name="Label" type="Label" parent="."]
offset_left = -60.0
offset_top = -215.0
offset_right = 63.0
offset_bottom = -78.0
theme_override_font_sizes/font_size = 100
text = "adsf"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
